Groups don't dig nulls